# dpdl

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py  run2-puhti.sh  run2.sh  run4-puhti.sh  run8.sh  run_wrapper.sh  train.py
.github/: PULL_REQUEST_TEMPLATE.md
RESULTS/: result.txt
conf/: adapt_random.conf  optuna_from_scratch.conf  optuna_hypers-difficult-datasets.conf  optuna_hypers-hpo-alternatives.conf  optuna_hypers-mf-high-memory-cifar10-vgg-lr-bands.conf  optuna_hypers-mf-high-memory-imdb-bert-lr-bands.conf  optuna_hypers-privacy-assistant-real-world.conf  optuna_hypers-shots25.conf  optuna_hypers-shots250.conf  optuna_hypers-shots500.conf  optuna_hypers-subset0.1.conf  optuna_hypers-subset1.0.conf  optuna_hypers-weight-perturbation.conf  optuna_hypers.conf  optuna_hypers_adapt.conf  optuna_hypers_adapt_1107.conf  optuna_hypers_adapt_1107.conf.bak  optuna_hypers_adapt_Adam_1112.conf  optuna_trials-cifar100.conf  optuna_trials-svhn_cropped_balanced-avg.conf  optuna_trials-svhn_cropped_balanced.conf  resnet_0328.conf
docs/: 00-experiment-batch-size-variation.md  01-film-vs-lora-evaluation.md  callbacks.md  epochs-vs-steps.md  experiment-directory.md  experiments.md  hyperparameter-optimization.md  models.md  testing.md  trainer.md  troubleshoot.md
dpdl/: bsr.py  callback_factory.py  callbacks.py  cli.py  configurationmanager.py  custom_metrics_factory.py  datamodules.py  device.py  experimentmanager.py  hyfreedp.py  hyperparameteroptimizer.py  logger_config.py  loss_factory.py  loss_landscape.py  metrics_factory.py  models.py  (+8 more)
(+2470 files in other folders)
